fixed function argument

--- a/knn-iris-classification.ipynb
+++ b/knn-iris-classification.ipynb
@@ -585,7 +585,7 @@
    "outputs": [],
    "source": [
     "def predict_user_input():\n",
-    "    prediction = predict_classification(train_array, get_user_input(), 3)\n",
+    "    prediction = predict_classification(train_array, get_user_input(), k)\n",
     "    print('Predicted iris: ' + prediction)"
    ]
   },
