--- a/knn-iris-classification.ipynb
+++ b/knn-iris-classification.ipynb
@@ -427,8 +427,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_array = df_train.to_numpy()\n",
-    "test_array = df_test.to_numpy()"
+    "train = df_train.to_numpy()\n",
+    "test = df_test.to_numpy()"
    ]
   },
   {
@@ -454,11 +454,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_nearest_neighbors(train_array, test_row, k):\n",
+    "def get_nearest_neighbors(train, test_row, k):\n",
     "    distances = []\n",
     "    data = []\n",
     "    \n",
-    "    for train_row in train_array:\n",
+    "    for train_row in train:\n",
     "        distance = calculate_euclidean_distance(test_row, train_row)\n",
     "        distances.append(distance)\n",
     "        data.append(train_row)\n",
@@ -479,8 +479,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_classification(train_array, test_row, k):\n",
-    "    neighbors = get_nearest_neighbors(train_array, test_row, k)\n",
+    "def predict_classification(train, test_row, k):\n",
+    "    neighbors = get_nearest_neighbors(train, test_row, k)\n",
     "    output_values = [row[-1] for row in neighbors]\n",
     "    prediction = max(output_values, key=output_values.count)\n",
     "    \n",
@@ -512,11 +512,11 @@
    "outputs": [],
    "source": [
     "def get_test_set_predictions(k):\n",
-    "    actual = test_array[:, -1]\n",
+    "    actual = test[:, -1]\n",
     "    predicted = []\n",
     "\n",
-    "    for test_row in test_array:\n",
-    "        prediction = predict_classification(train_array, test_row, k)\n",
+    "    for test_row in test:\n",
+    "        prediction = predict_classification(train, test_row, k)\n",
     "        predicted = np.append(predicted, prediction)\n",
     "    \n",
     "    correct = get_correct_predictions(actual, predicted)\n",
@@ -560,7 +560,7 @@
     "def get_user_input():\n",
     "    print('Enter vector values: ')\n",
     "    vector = []\n",
-    "    size = test_array[0].size - 1\n",
+    "    size = test[0].size - 1\n",
     "    \n",
     "    for i in range(size):\n",
     "        vector.append(float(input('Value: ')))\n",
@@ -577,7 +577,7 @@
    "outputs": [],
    "source": [
     "def predict_user_input():\n",
-    "    prediction = predict_classification(train_array, get_user_input(), k)\n",
+    "    prediction = predict_classification(train, get_user_input(), k)\n",
     "    print('Predicted iris: ' + prediction)"
    ]
   },
