--- a/notebooks/accuracy_plot.ipynb
+++ b/notebooks/accuracy_plot.ipynb
@@ -1,14 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    "### Plotting accuracy by different values of k\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "accuracies = []\n",
     "\n",
     "for k in range(1, 100):\n",
@@ -20,7 +28,13 @@
     "plt.title('Accuracy by k value')\n",
     "plt.xlabel('k')\n",
     "plt.ylabel('Accuracy')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
